# mitxpro

./: .coveragerc  .dockerignore  .env.example  .eslintrc  .flowconfig  .gitignore  .isort.cfg  .istanbul.yml  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  .rsync-ignore  .sass-lint.yml  .secrets.baseline  .stylelintrc.yaml  .travis.yml  .yarnrc.yml  AGENTS.md  Aptfile  Dockerfile  Dockerfile-nb  Dockerfile-node  LICENSE  Procfile  README.md  RELEASE.rst  app.base.json  app.ipynb.example  app.json  apt.txt  conftest.py  docker-compose-notebook.yml  docker-compose.override.yml  docker-compose.travis.yml  docker-compose.yml  drf_lint_baseline.json  fastly_verification.html  hot-reload-dev-server.js  loadtest.js  manage.py  (+20 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_template.md  config_change_template.md  feature_template.md  rfc_template.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md  rfc_template.md
.github/workflows/: ci.yml  new-issues.yml  production.yml  release-candiate.yml  scanning.yml
.yarn/releases/: yarn-3.1.0.cjs  yarn-3.6.4.cjs  yarn-3.8.3.cjs
.zap/: rules.tsv
affiliate/: README.md  admin.py  api.py  api_test.py  apps.py  constants.py  factories.py  middleware.py  middleware_test.py  models.py
affiliate/migrations/: 0001_affiliate_initial_models.py
authentication/: api.py  api_test.py  apps.py  exceptions.py  middleware.py  middleware_test.py  serializers.py  serializers_test.py  strategy.py  strategy_test.py  urls.py  utils.py  utils_test.py  views.py  views_test.py
authentication/pipeline/: compliance.py  compliance_test.py  user.py  user_test.py
authentication/templates/: confirmation_sent.html  (+3 more)
b2b_ecommerce/: admin.py  admin_test.py  api.py  api_test.py  apps.py  conftest.py  constants.py  factories.py  models.py  models_test.py  serializers.py  signals.py  urls.py  views.py  views_test.py
blog/: api.py  api_test.py  apps.py  urls.py  views.py
caching/: api.py
cms/: README.md  api.py  api_test.py  blocks.py  constants.py  embeds.py  embeds_test.py  factories.py  filters.py  forms.py  models.py  models_test.py  permissions.py  serializers.py  template_tags_test.py  urls.py  utils.py  utils_test.py  views.py  views_test.py  wagtail_api.py  wagtail_api_filters.py  wagtail_api_serializers.py  wagtail_hooks.py
compliance/: admin.py  api.py  api_test.py  apps.py  constants.py  factories.py  models.py  test_utils.py
config/: nginx.conf  nginx.conf.erb
courses/: README.md  __init__.py  admin.py  api.py  api_test.py  apps.py  constants.py  constants_test.py  credentials.py  credentials_test.py  data_provider.py  data_provider_test.py  exceptions.py  factories.py  forms.py  messages.py  messages_test.py  models.py  models_test.py  serializers.py  serializers_test.py  signals.py  signals_test.py  tasks.py  tasks_test.py  urls.py  utils.py  utils_test.py  views.py  views_test.py  wagtail_hooks.py  wagtail_views.py
courseware/: __init__.py  admin.py  api.py  api_test.py  apps.py  constants.py  exceptions.py  factories.py  models.py  signals.py  signals_test.py  tasks.py  tasks_test.py  urls.py  utils.py  views.py  views_test.py
docs/: aqueduct.md  configure_digital_credentials.md  configure_open_edx.md
ecommerce/: __init__.py  admin.py  admin_test.py  api.py  api_test.py  apps.py  conftest.py  constants.py  exceptions.py  factories.py  filters.py  hubspot_api.py  hubspot_api_test.py  mail_api.py  mail_api_test.py  models.py  models_test.py  permissions.py  permissions_test.py  serializers.py  serializers_test.py  signals.py  signals_test.py  task_helpers.py  tasks.py  tasks_test.py  test_utils.py  urls.py  utils.py  utils_test.py  views.py  views_test.py  wagtail_hooks.py  wagtail_views.py
fixtures/: autouse.py  common.py  cybersource.py  user.py
hubspot/: api.py  api_test.py  conftest.py  factories.py  models.py  serializers.py  serializers_test.py  task_helpers.py  tasks.py  tasks_test.py
hubspot_xpro/: api.py  api_test.py  conftest.py  serializers.py  serializers_test.py  task_helpers.py  tasks.py  tasks_test.py
localdev/: app.ipynb.example
mail/: api.py  api_test.py  apps.py  constants.py  exceptions.py  forms.py  urls.py  verification_api.py  verification_api_test.py  views.py
maxmind/: README.md  admin.py  api.py  api_test.py  apps.py  factories.py  models.py
mitxpro/: __init__.py  admin.py  apps.py  aqueduct_settings.py  celery.py  celery_utils.py  context_processors.py  envs.py  envs_test.py  exceptions.py  features.py  middleware.py  middleware_test.py  models.py  models_test.py  permissions.py  permissions_test.py  sentry.py  serializers.py  serializers_test.py  settings.py  settings_aqueduct.py  settings_aqueduct_dev.py  settings_test.py  tasks.py  tasks_test.py  test_utils.py  test_utils_test.py  urls.py  urls_healthcheck.py  urls_test.py  utils.py  utils_test.py  views.py  views_test.py  wsgi.py
scripts/: envs.sh  install_yarn.js  pg_upgrade.sh  repl.js  yarn_version.js
seed/: api.py
sheets/: README.md  __init__.py  admin.py  api.py  api_test.py  apps.py  configure_sheets_client.md  conftest.py  constants.py  coupon_assign_api.py  coupon_request_api.py  coupon_request_api_test.py  deferral_request_api.py  dev-setup.md  enrollment_change_api.py  exceptions.py  factories.py  mail_api.py  models.py  models_test.py  permissions.py  refund_request_api.py  refund_request_api_test.py  sheet_handler_api.py  tasks.py  tasks_test.py  urls.py  utils.py  utils_test.py  views.py  views_test.py
travis/: Dockerfile-travis-watch  Dockerfile-travis-watch-build  Dockerfile-travis-web  codecov_python.sh  js_tests.sh  python_tests.sh  update-docker-hub.sh
users/: admin.py  api.py  api_test.py  apps.py  constants.py  exceptions.py  factories.py  models.py  models_test.py  serializers.py  serializers_test.py  tasks.py  tasks_test.py  urls.py  utils.py  utils_test.py  views.py  views_test.py  wagtail_views.py  wagtail_views_test.py
voucher/: admin.py  apps.py  conftest.py  factories.py  forms.py  forms_test.py  models.py  urls.py  utils.py  utils_test.py  views.py  views_test.py
(+893 files in other folders)
