[project]
name = "mitxpro"
version = "0.1.0"
description = "MITx Pro"
authors = [{ name = "MIT ODL" }]
requires-python = ">=3.13,<4"
readme = "README.md"
license = "BSD-3"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "Pillow==10.4.0",
    "PyNaCl==1.6.2",
    "beautifulsoup4==4.14.3",
    "boto3==1.43.2",
    "celery==5.6.3",
    "celery-redbeat==2.3.3",
    "dj-database-url==3.1.2",
    "django==5.2.14",
    "django-anymail[mailgun]==14.0",
    "django-filter>=24",
    "django-hijack==3.7.8",
    "django-ipware==7.0.1",
    "django-oauth-toolkit==3.2.0",
    "django-redis>=6.0.0,<7",
    "django-robots==6.1",
    "django-silk>=5.0.3,<6",
    "django-storages==1.14.6",
    "django-user-agents==0.4.0",
    "django-webpack-loader==1.8.1",
    "djangorestframework==3.16.1",
    "edx-api-client==1.14.0",
    "google-api-python-client==2.192.0",
    "google-auth==1.35.0",
    "granian>=2.7.2",
    "hubspot-api-client==12.0.0",
    "ipython>=9.0.0,<10",
    "mitol-django-authentication==2025.3.17",
    "mitol-django-common==2025.12.23.2",
    "mitol-django-digital-credentials==2023.12.19",
    "mitol-django-hubspot-api==2026.5.6",
    "mitol-django-mail==2025.6.24",
    "mitol-django-oauth-toolkit-extensions==2025.3.17",
    "mitol-django-observability>=2026.1.0",
    "mitol-django-olposthog>=2025.0.0,<2026",
    "newrelic>=10.0.0,<11",
    "pdftotext>=3.0.0,<4",
    "psycopg2==2.9.11",
    "pycountry==26.2.16",
    "pygsheets==2.0.2",
    "redis==7.3.0",
    "requests>=2.31.0,<3",
    "sentry-sdk>=2.0.0,<3",
    "setuptools==80.0.1",
    "social-auth-app-django>=5.4.0,<6",
    "ulid-py>=1.1.0,<2",
    "user-agents==2.2.0",
    "user-util==2.0.0",
    "uwsgi==2.0.31",
    "wagtail==6.4.2",
    "wagtail-metadata==5.0.0",
    "xmltodict>=1.0.0,<2",
    "zeep==4.3.2",
]

[dependency-groups]
dev = [
    "bpython",
    "django-debug-toolbar",
    "factory-boy==3.3.3",
    "faker==40.15.0",
    "flaky==3.8.1",
    "freezegun==1.5.5",
    "hypothesis==4.24.6",
    "ipdb",
    "mitol-drf-lint==2026.4.2",
    "nplusone>=0.8.1",
    "pdbpp",
    "pytest>=9",
    "pytest-cov>=2.6.1",
    "pytest-django",
    "pytest-env",
    "pytest-lazy-fixtures",
    "pytest-mock",
    "pytest-xdist",
    "responses",
    "safety",
    "semantic-version",
    "wagtail-factories",
]

[tool.uv]
package = false
no-binary-package = ["lxml", "xmlsec"]

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
addopts = "--cov . --cov-report term --cov-report html --cov-report xml --ds=mitxpro.settings --reuse-db"
norecursedirs = [
    "node_modules",
    ".git",
    ".tox",
    "static",
    "templates",
    ".*",
    "CVS",
    "_darcs",
    "{arch}",
    "*.egg",
]
filterwarnings = [
    "error",
    # sentry-sdk deprecates configure_scope ahead of a future major release.
    "ignore:sentry_sdk\\.configure_scope is deprecated and will be removed in the next major version.*:DeprecationWarning",
    # Paramiko emits this warning when the test environment has no SSH host keys configured.
    "ignore:Failed to load HostKeys",
    # pytest-cov warns when coverage is disabled for targeted local runs.
    "ignore:Coverage disabled via --no-cov switch!",
    # Wagtail triggers Django 6.0 URLField scheme deprecations during test collection.
    "ignore:The default scheme will be changed from 'http' to 'https' in Django 6\\.0.*:django.utils.deprecation.RemovedInDjango60Warning",
    # pytest may import namespace-package directories while collecting tests.
    "ignore:.*Not importing directory.*:ImportWarning",
]
env = [
    "CELERY_TASK_ALWAYS_EAGER=True",
    "DJANGO_SETTINGS_MODULE=mitxpro.settings",
    "CYBERSOURCE_WSDL_URL=",
    "CYBERSOURCE_MERCHANT_ID=",
    "CYBERSOURCE_TRANSACTION_KEY=",
    "CYBERSOURCE_INQUIRY_LOG_NACL_ENCRYPTION_KEY=",
    "MITOL_DIGITAL_CREDENTIALS_VERIFY_SERVICE_BASE_URL=http://localhost:5000/",
    "MITOL_DIGITAL_CREDENTIALS_HMAC_SECRET=test-hmac-secret", # pragma: allowlist secret
    "MITXPRO_EMAIL_BACKEND=django.core.mail.backends.locmem.EmailBackend",
    "MITXPRO_NOTIFICATION_EMAIL_BACKEND=django.core.mail.backends.locmem.EmailBackend",
    "RECAPTCHA_SITE_KEY=",
    "RECAPTCHA_SECRET_KEY=",
    "DEBUG=False",
    "WEBPACK_DISABLE_LOADER_STATS=True",
    "MAILGUN_KEY=fake_mailgun_key",
    "MAILGUN_SENDER_DOMAIN=other.fake.site",
    "MITXPRO_ADMIN_EMAIL=example@localhost",
    "MITXPRO_BASE_URL=http://localhost:8053",
    "MITXPRO_DB_DISABLE_SSL=True",
    "MITXPRO_SECURE_SSL_REDIRECT=False",
    "MITXPRO_USE_S3=False",
    "OPENEDX_API_BASE_URL=http://localhost:18000",
    "OPENEDX_API_CLIENT_ID=fake_client_id",
    "OPENEDX_API_CLIENT_SECRET=fake_client_secret", # pragma: allowlist secret
    "SENTRY_DSN=",
    "WAGTAIL_CACHE_BACKEND=django.core.cache.backends.dummy.DummyCache",
    "WAGTAIL_CACHE_URL=",
    "POSTHOG_ENABLED=True",
]
